--- a/style-portfolio.css
+++ b/style-portfolio.css
@@ -3,7 +3,8 @@
   padding: 0;
 }
 
-html { /* SMOOTH SCROLL */
+html {
+  /* SMOOTH SCROLL */
   scroll-behavior: smooth;
 }
 
@@ -199,10 +200,10 @@ hr {
 
 #home .columns {
   margin: 0 15px 25px;
-  box-shadow: 0 1px 3px rgb(0, 0, 0, 12), 0 1px 3px rgb(0, 0, 0, 24);
-  border: 1px solid #282828;
+  /*box-shadow: 0 1px 3px rgb(0, 0, 0, 12), 0 1px 3px rgb(0, 0, 0, 24);
+  border: 0px solid #282828;*/
   background: #fff;
-  /*border-radius: 10px;*/
+  border-radius: 10px;
   flex-basis: 33%;
 }
 
@@ -211,10 +212,9 @@ hr {
 }
 #home img {
   max-width: 100%;
-  padding: 10px;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1100px) {
   #home {
     flex-direction: column;
   }
@@ -255,10 +255,99 @@ hr {
 @media screen and (max-width: 1200px) {
   .container-port {
     grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 @media screen and (max-width: 900px) {
   .container-port {
     grid-template-columns: repeat(1, 1fr);
   }
-  
+}
+
+#port-hr {
+  border: 0;
+  border-top: solid 1px #444;
+  border-top-color: rgba(0, 0, 0, 0.25);
+
+  box-shadow: 0px 1px 0px 0px rgba(100, 100, 100, 0.2);
+  height: 1px;
+  margin: 0 0;
+}
+
+/* CONTACTO */
+.container-contact {
+  background-color: #282828;
+  width: 100%;
+}
+.container-contact h2 {
+  color: white;
+  text-align: center;
+  padding-top: 70px;
+  margin-bottom: 20px;
+  font-size: 40px;
+}
+
+#form {
+  text-align: center;
+}
+input,
+textarea {
+  width: 50%;
+  margin-bottom: 20px;
+  border-radius: 7px;
+}
+
+#btn-send {
+  width: 150px;
+  height: 50px;
+  font-size: 20px;
+  font-weight: 600;
+  color: #ffffff;
+  border: solid 1px #3498db;
+  background: #43b3e0;
+  border-radius: 8px;
+  text-shadow: -1px -1px 0.5px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.5),
+    inset 0px 2px 1px 0px rgba(255, 255, 255, 0.75);
+  display: block;
+  margin: auto;
+}
+
+#btn-send:hover {
+  /*box-shadow: inset 0 0 60px #2980b9;*/
+  background-color: #43bff0;
+  cursor: pointer;
+}
+
+#social-media {
+  text-align: center;
+}
+
+#social-media h2 {
+  font-size: 25px;
+}
+
+#social-media i {
+  color: #ffffff;
+  font-size: 40px;
+  margin-top: 90px;
+  margin-bottom: 15px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+#git:hover {
+  color: orangered;
+}
+
+#linked:hover {
+  color: #40739e;
+}
+
+#face:hover {
+  color: #0652dd;
+}
+
+#twitter:hover {
+  color: #00a8ff;
+}
